fix page overflow issues by removing margin and padding from body/html

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Outfit', sans-serif;
   font-size: 15px;
   background-color: hsl(212, 45%, 89%);
-  width: 100vw;
-  height: 100vh;
 }
 
 #app {
@@ -13,5 +16,4 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
 }
